<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterDevice">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_margin="32dp">
            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_cod_disp"
                android:gravity="center"
                android:textSize="72sp"
                android:layout_marginBottom="32dp"/>
            <EditText
                android:id="@+id/cod_disp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/cod_disp"
                android:inputType="numberPassword"
                android:maxLength="3"
                android:maxLines="1"
                android:lines="1"
                android:textSize="48sp"
                android:gravity="center"/>
            <Button
                android:id="@+id/btn_codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validar"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:enabled="false"
                android:textSize="48sp"/>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>