<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_margin="32dp">
                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/punto_de_fichaje"
                    android:gravity="center"
                    android:textSize="72sp"
                    android:layout_marginBottom="32dp"/>
                <android.widget.TextClock
                    android:id="@+id/digitalClock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:format24Hour="kk:mm:ss"
                    android:format12Hour="@null"
                    android:textSize="72sp"
                    android:layout_marginBottom="32dp"/>
                <EditText
                    android:id="@+id/codigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/intro_cod"
                    android:inputType="numberPassword"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:lines="1"
                    android:textSize="48sp"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/validar"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:enabled="false"
                    android:visibility="gone"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical">
            <com.simetriagrupo.fictab.utils.MyKeyboard
                android:id="@+id/keyboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"/>
</RelativeLayout>